Fixed unnecessary top padding for container in #wrap

--- a/search/static/search.css
+++ b/search/static/search.css
@@ -189,9 +189,6 @@ html, body {
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
 
-#wrap > .container {
-	padding: 60px 15px 0;
-}
 .container .credit {
 	margin: 20px 0;
 }
